# autonomous-software-factory

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RESEARCH_QUESTION.md  SECURITY.md  SECURITY_ARCHITECTURE.md  dependency_manifest.json  pyproject.toml
docs/: ARCHITECTURE.md  HARDWARE.md
docs/decisions/: ADR-001-orchestrator-choice.md  ADR-002-model-selection.md  ADR-003-revert-only-sre.md  ADR-004-skeleton-first-generation.md
orchestrator/: __init__.py  workflow.py
pipeline/: __init__.py  errors.py  state.py
pipeline/shared/: __init__.py  config.py  cost.py  llm_client.py  metrics.py  models.py  retry.py  temporal_helpers.py
src/autonomous_software_factory/: __init__.py
src/autonomous_software_factory/orchestrator/: __init__.py  complexity.py
src/autonomous_software_factory/pipeline/: __init__.py  cost_ledger.py  models.py
src/autonomous_software_factory/workers/: __init__.py
src/autonomous_software_factory/workers/specification/: __init__.py  blueprint.py
src/autonomous_software_factory/workers/sre/: __init__.py  fire_drill.py  thresholds.py
tests/: test_blueprint.py  test_complexity.py  test_config.py  test_cost.py  test_cost_extended.py  test_cost_ledger.py  test_fire_drill.py  test_llm_client.py  test_llm_client_extended.py  test_models.py  test_models_extended.py  test_retry.py  test_retry_extended.py  test_sre_thresholds.py  test_state.py  test_temporal_helpers.py
workers/: __init__.py  base.py  coder_agent.py  qa_agent.py  sre_agent.py
