[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-software-factory"
version = "0.1.0"
description = "AI-driven software development lifecycle pipeline"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Shane Louis Slabbert"}]
dependencies = [
    "temporalio==1.7.1",
    "fastapi==0.115.6",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.3",
    "chromadb==0.6.3",
    "openai==1.58.1",
    "z3-solver==4.13.4.0",
    "hypothesis==6.123.1",
    "prometheus-client==0.21.1",
    "gitpython==3.1.43",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "mypy==1.13.0",
    "ruff==0.8.4",
    "bandit==1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=autonomous_software_factory --cov-report=term-missing --cov-report=html"

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.coverage.run]
source = ["src/autonomous_software_factory"]

[tool.coverage.report]
fail_under = 80
show_missing = true
