[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[project]
name = "autonomous-software-factory"
version = "0.1.0"
description = "AI-driven software development lifecycle pipeline"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Shane Louis Slabbert" },
]
dependencies = [
    "temporalio==1.7.1",
    "fastapi==0.115.6",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.3",
    "pydantic-settings>=2.6.0",
    "chromadb==0.6.3",
    "openai==1.58.1",
    "z3-solver==4.13.4.0",
    "hypothesis==6.123.1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "prometheus-client==0.21.1",
    "gitpython==3.1.43",
]

[project.optional-dependencies]
dev = [
    "mypy==1.13.0",
    "ruff==0.8.4",
    "bandit==1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "temporalio.*",
    "chromadb.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pipeline --cov-report=term-missing"
